syntax = "proto3";

package pricing;

option go_package = "./pricing";

// Pricing Service - Responsable del c√°lculo tarifario
service PricingService {
  // Calcula el desglose completo de una orden
  rpc CalculatePrice(CalculatePriceRequest) returns (CalculatePriceResponse);
}

// Enums
enum Zone {
  ZONE_UNSPECIFIED = 0;
  ZONE_METRO = 1;
  ZONE_INTERIOR = 2;
  ZONE_FRONTERA = 3;
}

enum ServiceType {
  SERVICE_UNSPECIFIED = 0;
  SERVICE_STANDARD = 1;
  SERVICE_EXPRESS = 2;
  SERVICE_SAME_DAY = 3;
}

enum DiscountType {
  DISCOUNT_NONE = 0;
  DISCOUNT_PERCENT = 1;
  DISCOUNT_FIXED = 2;
}

// Messages
message Package {
  double weight_kg = 1;
  double height_cm = 2;
  double width_cm = 3;
  double length_cm = 4;
  bool fragile = 5;
  double declared_value_q = 6;
}

message Discount {
  DiscountType type = 1;
  double value = 2;
}

message CalculatePriceRequest {
  Zone origin_zone = 1;
  Zone destination_zone = 2;
  ServiceType service_type = 3;
  repeated Package packages = 4;
  Discount discount = 5;
  bool insurance_enabled = 6;
}

message Breakdown {
  double order_billable_kg = 1;
  double base_subtotal = 2;
  double service_subtotal = 3;
  double fragile_surcharge = 4;
  double insurance_surcharge = 5;
  double subtotal_with_surcharges = 6;
  double discount_amount = 7;
  double total = 8;
  // Detalles adicionales
  double rate_per_kg = 9;
  double service_multiplier = 10;
  int32 fragile_packages_count = 11;
  double declared_value_total = 12;
}

message CalculatePriceResponse {
  Breakdown breakdown = 1;
  bool valid = 2;
  string error_message = 3;
}
